--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/api/live",
-      "dest": "/api/live.go"
+      "src": "/api/test",
+      "dest": "/api/test.go"
     }
   ]
 }
