添加一起看

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
       "dest": "/api/live.go"
     },
     {
+      "src": "/yqk/.*",
+      "dest": "/api/yqk.go"
+    },
+    {
       "src": "/",
       "dest": "/api/index.go"
     }
