--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "src": "/yqk/.*",
-      "dest": "/api/yqk.go"
+      "dest": "/api/yqk/yqk.go"
     },
     {
       "src": "/",
